Set overflow and max height to header side divs, this is to avoid overlapping texts between header and body.

--- a/trunk/emptiness/src/main/resources/styles/style.css
+++ b/trunk/emptiness/src/main/resources/styles/style.css
@@ -25,6 +25,10 @@ div#header {
     top: 10px;
     width: 1020px;
 }
+div#header div.side {
+    max-height: 265px;
+    overflow: auto;
+}
 div#header div.main {
     font-weight: bold;
 }
